[PRM-917] - Add CSRF protection on Upscan endpoints and test access control origin header setting

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -198,4 +198,5 @@ upscan {
   maxFileSize = 6291456
   statusCheckTimeout = 5 # Timeout in seconds
   statusCheckDelay = 500 # Amount to delay check of status by X ms
+  origin = "*"
 }
